force-app/main/default/objects/OrderItem/fields/BillingBlockReason__c.field-meta.xml
<CustomField>
    <fullName>BillingBlockReason__c</fullName>
    <inlineHelpText>Specifies the reason why this individual line item is blocked for invoicing in SAP.</inlineHelpText>
    <label>Billing Block Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BillingBlockReason</valueSetName>
    </valueSet>
</CustomField>