force-app/main/default/objects/OrderItem/fields/CostAmount__c.field-meta.xml
<CustomField>
    <fullName>CostAmount__c</fullName>
    <label>Cost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>