force-app/main/default/objects/OrderItem/fields/DeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>DeliveryStatus__c</fullName>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Not delivered</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Partially delivered</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Completely delivered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>