force-app/main/default/objects/OrderItem/fields/DiscountAbsolute__c.field-meta.xml
<CustomField>
    <fullName>DiscountAbsolute__c</fullName>
    <label>Discount (Absolute)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>