force-app/main/default/objects/OrderItem/fields/DiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercent__c</fullName>
    <label>Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>