force-app/main/default/objects/OrderItem/fields/ERPRejectionReason__c.field-meta.xml
<CustomField>
    <fullName>ERPRejectionReason__c</fullName>
    <label>ERP Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>System Assigned</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>Delivery Date Too Late</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Poor Quality</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Too Expensive</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Competitor Offers Better Service</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Warranty</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Out of Stock</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Order Requires Rechecking</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Unauthorized Customer Request</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Customer Receives Replacement Delivery</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Process Under Clarification</label>
            </value>
            <value>
                <fullName>62</fullName>
                <label>Rejected by Selling Company</label>
            </value>
            <value>
                <fullName>CR</fullName>
                <label>Copied and Rejected</label>
            </value>
            <value>
                <fullName>G1</fullName>
                <label>SWP Notification</label>
            </value>
            <value>
                <fullName>G2</fullName>
                <label>SWP Suspended</label>
            </value>
            <value>
                <fullName>G3</fullName>
                <label>SWP Rejected</label>
            </value>
            <value>
                <fullName>G4</fullName>
                <label>SWP Marked (during approval deleted)</label>
            </value>
            <value>
                <fullName>J1</fullName>
                <label>DRM Withdrawal / Claim Rejection</label>
            </value>
            <value>
                <fullName>LV</fullName>
                <label>Service Specification Completed</label>
            </value>
            <value>
                <fullName>NR</fullName>
                <label>Copy Error: New List Price Rejected</label>
            </value>
            <value>
                <fullName>ZR</fullName>
                <label>Return Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>