force-app/main/default/objects/OrderItem/fields/FreeItem__c.field-meta.xml
<CustomField>
    <fullName>FreeItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-580 Checked if row has been auto created by CartItemTrigger. Transferred by CartItem.</description>
    <label>Free Item</label>
    <type>Checkbox</type>
</CustomField>