force-app/main/default/objects/OrderItem/fields/FreeReason__c.field-meta.xml
<CustomField>
    <fullName>FreeReason__c</fullName>
    <description>This field should be filled when the OrderItem is sold for free. It is used in the ERP to explain why the product was sold for free</description>
    <label>FreeReason</label>
    <length>20</length>
    <type>Text</type>
</CustomField>