force-app/main/default/objects/OrderItem/fields/frmAvailableQuantity__c.field-meta.xml
<CustomField>
    <fullName>frmAvailableQuantity__c</fullName>
    <formula>AvailableQuantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>