force-app/main/default/objects/OrderItem/fields/Item_Net_Weight_KG__c.field-meta.xml
<CustomField>
    <fullName>Item_Net_Weight_KG__c</fullName>
    <label>Item Net Weight KG</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>