force-app/main/default/objects/OrderItem/fields/ItemGrossWeight__c.field-meta.xml
<CustomField>
    <fullName>ItemGrossWeight__c</fullName>
    <label>Item Gross Weight</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>