force-app/main/default/objects/OrderItem/fields/ItemGrossWeightKG__c.field-meta.xml
<CustomField>
    <fullName>ItemGrossWeightKG__c</fullName>
    <label>Item Gross Weight KG</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>