force-app/main/default/objects/OrderItem/fields/ItemVolume__c.field-meta.xml
<CustomField>
    <fullName>ItemVolume__c</fullName>
    <label>Item Volume</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>