force-app/main/default/objects/OrderItem/fields/ItemVolumeL__c.field-meta.xml
<CustomField>
    <fullName>ItemVolumeL__c</fullName>
    <label>Item Volume L</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>