force-app/main/default/objects/OrderItem/fields/ItemVolumeUnit__c.field-meta.xml
<CustomField>
    <fullName>ItemVolumeUnit__c</fullName>
    <label>Item Volume Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CM3</fullName>
                <label>Cubic centimeters</label>
            </value>
            <value>
                <fullName>M3</fullName>
                <label>Completely Referenced</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Liter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>