force-app/main/default/objects/OrderItem/fields/MaxPrice__c.field-meta.xml
<CustomField>
    <fullName>MaxPrice__c</fullName>
    <label>Max Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>