force-app/main/default/objects/OrderItem/fields/MinPrice__c.field-meta.xml
<CustomField>
    <fullName>MinPrice__c</fullName>
    <label>Min Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>