force-app/main/default/objects/OrderItem/fields/OrderItemPosition__c.field-meta.xml
<CustomField>
    <fullName>OrderItemPosition__c</fullName>
    <label>Order Item Position</label>
    <length>20</length>
    <type>Text</type>
</CustomField>