force-app/main/default/objects/OrderItem/fields/OrderRelatedBillingStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderRelatedBillingStatus__c</fullName>
    <inlineHelpText>Status of direct billing for this specific item (e.g., for services). For physical goods that are billed only after delivery, this field remains blank.</inlineHelpText>
    <label>Related Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Not Invoiced</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Partially Invoiced</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Completely Invoiced</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>