force-app/main/default/objects/OrderItem/fields/ProductionPlant__c.field-meta.xml
<CustomField>
    <fullName>ProductionPlant__c</fullName>
    <label>Production Plant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1100</fullName>
                <label>1100 - Hamburg</label>
            </value>
            <value>
                <fullName>1200</fullName>
                <label>1200 - Sauerlach</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>