force-app/main/default/objects/OrderItem/fields/Reference_Status__c.field-meta.xml
<CustomField>
    <fullName>Reference_Status__c</fullName>
    <inlineHelpText>Indicates the extent to which this specific item has already been transferred to subsequent documents (e.g., delivery slips or follow-up orders).</inlineHelpText>
    <label>Reference Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Not Referenced</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Partially Referenced</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Completely Referenced</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>